# E5150

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  common_pch.hpp  imgui.ini  main.cpp  win_build_hot_reload.bat  xed.nm
.github/workflows/: linux-test.yml
core/: 8086.hpp  8284A.hpp  CMakeLists.txt  Makefile  arch.hpp  bus.hpp  component.hpp  emulation_constants.hpp  eu.hpp  floppy.hpp  instructions.hpp  pch.hpp  ports.hpp  ram.hpp  util.hpp  xed-is-missing.sh
core/debugger/: cli.hpp  commands.hpp  commands.py  debugger.cpp  debugger.hpp  debugger.py
core/debugger/src/: cli.cpp  commands.cpp  debugger.cpp
core/include/: 8086.hpp  arch.hpp  biu.hpp  bus.hpp  component.hpp  config.hpp  config.in  decoder.hpp  decoderHelper.hpp  eu.hpp  fdc.hpp  instructions.hpp  pch.hpp  pit.hpp  ports.hpp  ppi.hpp  ram.hpp  util.hpp
core/src/: arch.cpp  cpu.cpp  pic.cpp  pit.cpp  ports.cpp  ppi.cpp  ram.cpp
core/src/cpu/: 8086.cpp  biu.cpp  decoder.cpp  eu.cpp  instructions_arithmetic.cpp  instructions_clock_cycles.cpp  instructions_control_transfer.cpp  instructions_data_transfer.cpp  instructions_logic.cpp  instructions_processor_control.cpp  instructions_string_manipulation.cpp
core/src/floppy/: command.cpp  fdc.cpp  floppy.cpp
debugger/: .gitignore  CMakeLists.txt  cli.cpp  cli.hpp  commands.cpp  commands.hpp  commands.py  communication.c  communication.cpp  communication.h  communication.hpp  debugger.cpp  debugger.hpp  debugger.py  debuggerCommandExecStatus.hpp  gui.cpp  platform.h
debugger/communication/: CMakeLists.txt  command.c  command.h  communication.c  communication.h  communication_unix.c
debugger/platform/: platform_unix.c  platform_win.c  platform_win32.c
debugger/server/: CMakeLists.txt  main.cpp
e5150/: CMakeLists.txt  CmakeLists.txt  Makefile  main.cpp
e5150/test/: clock_test.s  interrupts.s  jmp.s  jmp0.s
emulator/: 8086.hpp  Makefile  arch.hpp  component.hpp  config.hpp  dma.hpp  log.hpp  pch.hpp  pic.hpp  pit.hpp  ports.hpp  ppi.hpp  util.hpp
emulator/src/: arch.cpp  cpu.cpp  dma.cpp  pic.cpp  pit.cpp  ports.cpp  ppi.cpp  ram.cpp
emulator/src/cpu/: 8086.cpp  instructions_arithmetic.cpp  instructions_control_transfer.cpp  instructions_data_transfer.cpp  instructions_logic.cpp  instructions_processor_control.cpp
gui/: CMakeLists.txt  README.md  gui.cpp  gui.hpp  gui_states.hpp  hot_reload_draw.cpp  ui_loop.cpp
gui/common/: gui_states.hpp  hot_reload_draw.cpp  imgui_common.cpp  spdlog_imgui_color_sink.hpp
gui/macos/: gui.mm
gui/win/: gui.cpp  gui_d3d11.cpp  gui_d3d12.cpp
include/: 8086.hpp  arch.hpp  command.hpp  component.hpp  config.hpp  fdc.hpp  floppy.hpp  pch.hpp  pic.hpp  pit.hpp  util.hpp
platform/: CMakeLists.txt  platform.h  platform_unix.c  platform_win32.c
src/: arch.cpp  fdc.cpp  floppy.cpp  floppy.info  pic.cpp  pit.cpp  ports.cpp  ppi.cpp  ram.cpp
src/cpu/: 8086.cpp  instructions_arithmetic.cpp  instructions_control_transfer.cpp  instructions_data_transfer.cpp
src/floppy/: command.cpp  fdc.cpp  floppy.cpp
test/: CMakeLists.txt  Makefile  bios.s  interrupts.s  jmp.s  main.cpp  test.s  util.inc
testing/: main.cpp
